解析token验证
