# users/openapi.yaml
@@ -285,6 +285,15 @@ components:
         ListUsersRequest:
             type: object
             properties: {}
+        LoginData:
+            type: object
+            properties:
+                token:
+                    type: string
+                refreshToken:
+                    type: string
+                uid:
+                    type: string
         LoginUsersReply:
             type: object
             properties:
@@ -292,6 +301,8 @@ components:
                     type: boolean
                 message:
                     type: string
+                data:
+                    $ref: '#/components/schemas/LoginData'
         LoginUsersRequest:
             type: object
             properties:
